# melody-magnet

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose_example.yml
src/: main.rs
src/backend/: mod.rs
src/backend/tidal/: mod.rs  session.rs
src/infrastructure/: config.rs  mod.rs  registry.rs
