[package]
name = "melody-magnet"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
chrono = "0.4.39"
bytes = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
log = "0.4.26"
env_logger = "0.11.6"
metaflac = "0.2.7"