[package]
name = "melody-magnet"
version = "1.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
chrono = { version = "0.4.39", features = ["serde"] }
bytes = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
log = "0.4.26"
env_logger = "0.11.6"
metaflac = "0.2.7"
dotenvy = "0.15.7"
dotenv_config = "0.2.1"

strum = "0.27"
strum_macros = "0.27"

rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
cronjob = "0.4.17"