[package]
name = "melody-magnet"
version = "1.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", default-features = false }
bytes = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
metaflac = "0.2"
dotenvy = "0.15"
dotenv_config = "0.2"

strum = "0.27"
strum_macros = "0.27"

rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
cron_tab = {version = "0.2", features = ["sync"]}